--- a/cursosalura/Iniciante Programação/programa.html
+++ b/cursosalura/Iniciante Programação/programa.html
@@ -4,8 +4,27 @@
 
   var ano = 2022;
 
-  document.write("JP tem " + (ano - 1991) + " anos " + "<br>");
-  document.write("Thay tem " + (ano - 1992) + " anos " + "<br>");
-  document.write("Alucard tem " + (ano - 1976) + " anos" + "<br>");
+  document.write("JP tem " + (ano - 1977) + " anos ");
+  document.write("<br>");
+  document.write("Thay tem " + (ano - 1996) + " anos ");
+  document.write("<br>");
+
+  var ano = 2023;
+  document.write("Alucard tem " + (ano - 1976) + " anos");
+  document.write("<br>");
+
+  var idadeJP = 45;
+  var idadeThay = 26;
+  var idadeAluracard = 47;
+
+  var media = (idadeJP + idadeThay + idadeAluracard) / 3;
+
+  document.write("A média das idades é de " + Math.round(media));
+
+  var nome = "JP";
+
+  document.write("<br");
+  document.write("A idade de" + nome + "é de" + idadeJP + "anos");
+
 
 </script>
