--- a/cursosalura/Iniciante Programação/programa.html
+++ b/cursosalura/Iniciante Programação/programa.html
@@ -23,8 +23,8 @@
 
   var nome = "JP";
 
-  document.write("<br");
-  document.write("A idade de" + nome + "é de" + idadeJP + "anos");
+  document.write("<br>");
+  document.write(" A idade de " + nome + " é de " + idadeJP + " anos");
 
 
 </script>
