--- a/cursosalura/Iniciante Programação/calcula_consumo.html
+++ b/cursosalura/Iniciante Programação/calcula_consumo.html
@@ -1,9 +1,20 @@
 <meta charset="UTF-8">
 
-<h3> Álcool ou Gasolina? </h3>
+
+<h3> Álcool ou Gasolina </h3>
 
 <script>
 
+  var tanque = 40;
+  var caminhoComGasolina = 480;
+  var caminhoComAlcool = 300;
+
+  var consumoDeGasolina = caminhoComGasolina / tanque;
+  var consumoDeAlcool = caminhoComAlcool / tanque;
+
+  document.write("O consumo de gasolina foi:" + consumoDeGasolina + " litros");
+  document.write("<br>");
+  document.write("O consumo de álcool foi de : " + consumoDeAlcool + " litros");
 
 
 </script>
