--- a/cursosalura/Iniciante Programação/programa.html
+++ b/cursosalura/Iniciante Programação/programa.html
@@ -2,29 +2,25 @@
 
 <script>
 
+  function puloLinha() {
+
+    document.write("<br>");
+    document.write("<br>");
+  }
+
+  function mostra(frase) {
+
+    document.write(frase);
+    puloLinha();
+  }
+
   var ano = 2022;
 
-  document.write("JP tem " + (ano - 1977) + " anos ");
-  document.write("<br>");
-  document.write("Thay tem " + (ano - 1996) + " anos ");
-  document.write("<br>");
+  mostra("JP tem " + (ano - 1977) + " anos ");
+  mostra("Thay tem " + (ano - 1996) + " anos");
 
   var ano = 2023;
-  document.write("Alucard tem " + (ano - 1976) + " anos");
-  document.write("<br>");
 
-  var idadeJP = 45;
-  var idadeThay = 26;
-  var idadeAluracard = 47;
-
-  var media = (idadeJP + idadeThay + idadeAluracard) / 3;
-
-  document.write("A média das idades é de " + Math.round(media));
-
-  var nome = "JP";
-
-  document.write("<br>");
-  document.write(" A idade de " + nome + " é de " + idadeJP + " anos");
-
+  mostra("Alucard tem " + (ano - 1976) + " anos");
 
 </script>
