Update curso Iniciante

--- a/cursosalura/Iniciante Programação/relembrar2.html
+++ b/cursosalura/Iniciante Programação/relembrar2.html
@@ -3,8 +3,11 @@
 <script>
 
   function teste() {
-    document.write("Olá caraio, vamos lá!");
+    document.write("Olá caraio, vamos voltar nessa porra!");
   }
+
+  teste();
+
 
 
 </script>
