--- a/cursosalura/Front-end/Portilofio/index.html
+++ b/cursosalura/Front-end/Portilofio/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html>
-    <head> 
-        <title> Portifolio </title>
-    </head>
-    <body>
-        <h1>Isso é um título</h1>
-        <p>Isso aqui é exemplo de parágrafo </p>
-        <img src="html.png" alt="Logo do HTML 5">
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
 
+<body>
+    <header></header> 
+    <main>
+        <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade</strong></h1> 
+        <p>Olá! Sou João Paulo Ferreira, desenvolvedor Front-end com especialidade em Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+        <a href="https://instagram.com/jopas01">Instagram</a>
+        <a href="https://github.com/jpferreiradev">Github</a>
+        <img src="jpimagem.jpg" alt="Foto de João Paulo ">
+        
+    </main>
+    <footer></footer>
 
-
-
-    </body>
+</body>
 </html>
