--- a/cursosalura/Front-end/Portilofio/index.html
+++ b/cursosalura/Front-end/Portilofio/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header></header> 
     <main>
         <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade</strong></h1> 
-        <p>Olá! Sou João Paulo Ferreira, desenvolvedor Front-end com especialidade em Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+        <p>Olá! Sou João Paulo Ferreira, desenvolvedor Front-end com especialidade em <strong>Angular, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <a href="https://instagram.com/jopas01">Instagram</a>
         <a href="https://github.com/jpferreiradev">Github</a>
         <img src="jpimagem.jpg" alt="Foto de João Paulo ">
